styling: updated bkgd clr, fixed overlapping issue

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,14 +1,18 @@
+body {
+	font-family: Arial, Helvetica, sans-serif;
+	background-color: darkseagreen;
+}
+
 .hangman-container {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	line-height: 1.5;
+	line-height: 2;
 	letter-spacing: 2px;
 }
 
 .hangman-title {
 	font-size: 25px;
-	margin: -30px 0 5px 0;
 }
 
 .hangman-btn {
@@ -17,7 +21,9 @@
 	font-weight: bold;
 	background-color: white;
 	border: 1px solid #008cba;
+	border-radius: 8px;
 }
+
 .hangman-btn:hover {
 	background-color: #008cba;
 	color: white;
@@ -32,20 +38,19 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	margin: 10px;
 }
 
 .hangman-alphabet {
 	display: grid;
 	grid-template-columns: repeat(11, 1fr);
-	gap: 15px;
-	margin-top: -50px;
+	gap: 5px;
 }
 
 .hangman-letter {
 	padding: 10px;
 	background-color: rgb(255, 255, 255);
 	border: 1px solid #008cba;
+	border-radius: 8px;
 	font-size: 14px;
 	font-weight: bold;
 }
@@ -58,6 +63,7 @@
 .hangman-letter-wrong {
 	background-color: #f44336;
 	border: 1px solid #f44336;
+	border-radius: 8px;
 	color: white;
 	font-weight: bold;
 	cursor: not-allowed;
