--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -1,5 +1,8 @@
 .hangman-img-wrapper {
 	display: flex;
 	justify-content: center;
-	border: 2px solid black;
+	border-radius: 8px;
+	box-shadow: 0px 0px 5px 1px black;
+	background-color: white;
+	margin: 5px;
 }
